// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's ecommerceSingleProduct destination action: all fields 1`] = `
Object {
  "events": Array [
    Object {
      "_update_existing_only": true,
      "app_id": "Q#t9o",
      "braze_id": "Q#t9o",
      "email": "ritpaz@ihfizje.zm",
      "external_id": "Q#t9o",
      "name": "ecommerce.product_viewed",
      "phone": "Q#t9o",
      "properties": Object {
        "currency": "XAD",
        "image_url": "http://egu.ci/ritpaz",
        "metadata": Object {
          "testType": "Q#t9o",
        },
        "price": -81870429660119.05,
        "product_id": "Q#t9o",
        "product_name": "Q#t9o",
        "product_url": "http://egu.ci/ritpaz",
        "source": "Q#t9o",
        "variant_id": "Q#t9o",
      },
      "time": "2083-01-27T06:50:11.564Z",
      "user_alias": Object {
        "alias_label": "Q#t9o",
        "alias_name": "Q#t9o",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Braze's ecommerceSingleProduct destination action: required fields 1`] = `
Object {
  "events": Array [
    Object {
      "app_id": "Q#t9o",
      "braze_id": "Q#t9o",
      "external_id": "Q#t9o",
      "name": "ecommerce.product_viewed",
      "properties": Object {
        "currency": "XAD",
        "price": -81870429660119.05,
        "product_id": "Q#t9o",
        "product_name": "Q#t9o",
        "source": "Q#t9o",
        "variant_id": "Q#t9o",
      },
      "time": "2083-01-27T06:50:11.564Z",
    },
  ],
}
`;
